# Youtube-Orchestrator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  alembic.ini  pyproject.toml
_deprecated/: concepts.py
_deprecated/orchestrator/: activities.py  concept_engine.py  fundational_activities.py  (+16 more)
admin/: cli.py
assets/: lora_crude_cartoon.txt
channels/: profiles.json
docs/: channel_strategy_matrix.md  local-first-refactor-plan.md  manual-video-lab-zoro-vs-killua.md  scene-legibility-template.md
frontend/: package-lock.json  vite.config.ts
migrations/: env.py
scripts/: absorber_v2.py  analyze_run_video.py  basketball_anime.py  basketball_comeback.py  batch_formats.py  batch_v2.py  batch_v3.py  blender_glass_watermelon.py  blender_quick_test.py  boxer_3seconds.py  boxer_v2.py  cats_dance.py  cleopatra_v2.py  faster_every_round.py  force_satisdefying.py  heavy_sword.py  lad_fishing.py  lad_glass_wall.py  lad_sandwich.py  lad_space_epic.py  last_dragon_egg.py  last_student_ep1.py  last_student_ep2.py  make_satisfying.py  manual_hardcore_ranked_planets.py  manual_hardcore_ranked_planets_v2.py  meteor_kid.py  meteor_v3.py  ninja_story.py  pied_piper.py  pirate_heist.py  power_absorber.py  press_crystal_ball.py  raised_by_cleopatra.py  raised_by_wolves.py  resume_hydraulic_press.py  run_api.sh  run_frontend.sh  run_hydraulic_press.py  run_worker.sh  (+26 more)
tests/: test_game_meme_identity.py  test_hardcore_ranked_language.py  test_long_form.py  test_media.py  test_prompts.py  test_rendering.py  test_research.py  test_schemas.py  test_youtube_client.py
(+128 files in other folders)
